<resources>
    <string name="app_name">Actividad2</string>
    <string name="ImageButton1">Craft</string>
    <string name="ImageButton2">Jordan Rio</string>
    <string name="ImageButton3">Mid</string>
    <string name="ImageButton4">Spizike</string>
    <string name="ImageButton5">Retro</string>
    <string name="ImageButton6">Metcom</string>
    <string name="image">image</string>
    <string name="aqu_est_el_cl_sico_de_1989_ahora_en_elegantes_tonos_tierra_la_gamuza_el_cuero_y_las_telas_se_unen_en_la_parte_superior_para_lograr_un_look_verdaderamente_texturizado">Aquí está el clásico de 1989, ahora en elegantes tonos tierra. La gamuza, el cuero y las telas se unen en la parte superior para lograr un look verdaderamente texturizado.</string>
    <string name="volver">Volver</string>
    <string name="este_calzado_se_inspira_en_la_tranquilidad_de_la_puesta_de_sol_colombiana">Este calzado se inspira en la tranquilidad de la puesta de sol colombiana</string>
    <string name="volver3">Volver</string>
    <string name="mid">mid</string>
    <string name="volver2">Volver</string>
    <string name="inspirada_en_el_aj1_original_esta_edici_n_de_corte_mid_mantiene_el_look_ic_nico_que_te_encanta_y_los_colores_selectos_y_el_cuero_impecable_le_dan_una_identidad_distintiva">Inspirada en el AJ1 original, esta edición de corte mid mantiene el look icónico que te encanta, y los colores selectos y el cuero impecable le dan una identidad distintiva.</string>
    <string name="spizike">spizike</string>
    <string name="el_spizike_toma_elementos_de_4_jordan_ic_nicos_los_combina_y_ofrece_un_calzado_deportivo_nico_es_un_homenaje_a_spike_lee">El Spizike toma elementos de 4 Jordan icónicos, los combina y ofrece un calzado deportivo único. Es un homenaje a Spike Lee</string>
    <string name="volver4">Volver4</string>
    <string name="impecable_y_supremo_el_aj3_regresa_con_todo_su_estilo_y_gracia_de_siempre_el_cuero_de_calidad_de_la_parte_superior_y_la_lujosa_textura">Impecable y supremo, el AJ3 regresa con todo su estilo y gracia de siempre. El cuero de calidad de la parte superior y la lujosa textura</string>
    <string name="volver5">Volver</string>
    <string name="con_una_placa_hyperlift_m_s_grande_y_un_refuerzo_para_la_cuerda_de_goma_adicional_es_el_elegido_por_algunos_de_los_mejores_atletas_del_mundo">Con una placa Hyperlift más grande y un refuerzo para la cuerda de goma adicional. Es el elegido por algunos de los mejores atletas del mundo</string>
    <string name="volver6">Volver</string>
</resources>