<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnRetro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btn_dashboard_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/ImageButton1"
                android:scaleType="centerCrop"
                android:src="@drawable/boton1" />

            <ImageButton
                android:id="@+id/btn_dashboard_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/ImageButton2"
                android:scaleType="centerCrop"
                android:src="@drawable/boton2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageButton
                android:id="@+id/btn_dashboard_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/ImageButton3"
                android:scaleType="centerCrop"
                android:src="@drawable/boton3" />

            <ImageButton
                android:id="@+id/btn_dashboard_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/ImageButton4"
                android:scaleType="centerCrop"
                android:src="@drawable/boton4" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageButton
                android:id="@+id/btn_dashboard_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/ImageButton5"
                android:scaleType="centerCrop"
                android:src="@drawable/boton5" />

            <ImageButton
                android:id="@+id/btn_dashboard_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/ImageButton5"
                android:scaleType="centerCrop"
                android:src="@drawable/boton6" />
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

